# anltk

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Features.md  MANIFEST.in  README.md  build_linux_wheels.sh  deploy.sh  dummy.py  meson.build  meson_options.txt  pyproject.toml  rename_wheel.py  requirements.txt  setup.py  taskfile.yml
.github/workflows/: build_linux.yml  build_wheel.yml  build_windows.yml  c-cpp.yml  wheels.yml
anltk/: .clang-format  .gitignore  CMakeLists.txt  README.md  meson.build  meson_options.txt
anltk/fuzz_test/: meson.build  remove_diac_fuzz.cpp  split_fuzz.cpp
anltk/include/anltk/: anltk.hpp  anltk_algorithm.h  anltk_api.h  anltk_string_utils.h  anltk_typedefs.h  char_maps.h
anltk/src/: CMakeLists.txt  Preprocessor.cpp  anltk.h  anltk_algorithm.h  anltk_api.cpp  char_maps.cpp  char_maps.h  jumla.cpp  meson.build  noise.cpp  preprocessing.cpp  preprocessor.cpp  root_extraction.cpp  stemming.cpp  tafqeet.cpp  tafqit.cpp  tokenization.cpp  tokenizer.cpp  transliteratation.cpp  unicode_normalization.cpp  utils.cpp
anltk/subprojects/: doctest.wrap
anltk/tests/: CMakeLists.txt  anltk_char_names_test.cpp  anltk_jumla_test.cpp  anltk_noise_test.cpp  anltk_preprocessor_test.cpp  anltk_stemming_test.cpp  anltk_string_utils_test.cpp  anltk_tafqeet_test.cpp  anltk_tafqit_test.cpp  anltk_test.c  anltk_test.cpp  anltk_tokenizer_test.cpp  anltk_transliterator_test.cpp  anltk_unicode_normalization_test.cpp  anltk_utils_test.cpp  doctest_include.h  doctest_main.cpp  dummy.cpp  meson.build  utfcpptest.cpp
docker/: anltk_manylinux2010.dockerfile  anltk_manylinux2014.dockerfile  anltk_ubuntu20.dockerfile  deploy.dockerfile
docs/: IMPROVEMENTS_2025_11_09.md  IWYU.md  MESON_PYTHON_MIGRATION.md
pybind/: .gitignore  anltk_py.cpp  setup.py
pybind/tests/: dummy.py
python/: .gitignore  README.md  anltk  anltk_build.py  anltk_py.cpp  setup.py
python/anltk/: __init__.py  anltk_cffi.py  anltk_main.py
python/anltk_module/: meson.build
python/anltk_module/anltk/: __init__.py  anltk.py  version.py
python/anltk_module/anltk/constants/: __init__.py  constants.py
python/anltk_module/anltk/pybind/: anltk_pybind.cpp
python/anltk_module/anltk/tests/: dummy.py  utils_tests.py
python/tests/: dummy.py  tests.py
scripts/: build_linux_wheels.sh  deploy.sh  dummy.py
subprojects/: doctest.wrap  taskflow.wrap  utf8proc.wrap  utfcpp.wrap
subprojects/packagefiles/utf8proc/: meson.build  meson_options.txt
