[build-system]
requires = ["meson-python", "pybind11>=3.0.0"]
build-backend = "mesonpy"

[project]
name = "anltk"
dynamic = ["version"]
description = "Arabic Natural Language Toolkit (ANLTK)"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Boost Software License 1.0"}
authors = [
    {name = "Abdullah Alattar", email = "abdullah.mohammad.alattar@gmail.com"}
]
keywords = ["NLP", "Arabic", "python", "arabic", "c++"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Natural Language :: Arabic",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]

[project.urls]
Homepage = "https://github.com/Abdullah-AlAttar/anltk"
Source = "https://github.com/Abdullah-AlAttar/anltk"
"Bug Tracker" = "https://github.com/Abdullah-AlAttar/anltk/issues"

[tool.meson-python]
# Allow bundling shared libraries in Windows wheels
allow-windows-internal-shared-libs = true

[tool.meson-python.args]
# Automatically enable Python bindings and disable tests when building wheels
setup = ["-Dpython_bindings=true", "-Dbuild_tests=false"]